Created a page in the app for adding vacations called vacation.xml, and if excursion is added to the vacation, then a confirmation message appears if user tries to delete that vacation.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- Declare the ManageVacationActivity -->
+        <activity android:name=".ManageVacationActivity" />
+        <activity android:name=".VacationListActivity" />
     </application>
 
 </manifest>
