--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,13 @@
-plugins {
-    alias(libs.plugins.androidApplication)
-}
+apply plugin: 'com.android.application'
 
 android {
-    namespace 'com.example.d308'
-    compileSdk 34
+    compileSdkVersion 34
+    namespace "com.example.d308"
 
     defaultConfig {
         applicationId "com.example.d308"
-        minSdk 26
-        targetSdk 34
+        minSdkVersion 26
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -29,7 +27,6 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
@@ -37,4 +34,11 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    // Room dependencies
+    def room_version = "2.4.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
+
+gradle.ext.namespace = "com.example.d308"
